--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,9 @@
 name: yaml_config
-description: A simple configuration using YAML file
-version: 0.1.0
+description: >-
+  A simple configuration using YAML file.
+  It is easy to load a local YAML file as
+  main configuration for application.
+version: 0.1.1
 author: Lucas <me@dotronglong.com>
 homepage: https://github.com/dotronglong/dart_yaml_config
 
